# my_rag_flow

./: .gitignore  README.md  api.py  down.py  eval.py  main.py  notes.md  predict.py  pyproject.toml  quality_evaluate.py  request_addfile_example.py  requirements.txt  run.py  test.py  test2.json
config/: config.ini  model.ini
data/: cache_result.jsonl  competiton_answer.jsonl  person_answer.xlsx  知识库模版梳理-最新.xlsx
data/cache/AF-cache/: AF01.json  AF02.json  AF04.json  AF05.json  AF07.json  AF08.json  AF10.json  AF11.json  AF13.json  AF14.json  AF16.json  AF17.json  AF19.json  AF20.json  AF22.json  AF23.json  AF25.json  AF26.json  AF28.json  AF29.json  AF31.json  AF33.json  AF35.json  AF37.json  AF39.json  AF41.json
data/cache/AT-cache/: AT01.json  AT02.json  AT03.json  AT04.json  AT05.json  AT06.json  AT07.json  AT08.json  AT09.json  AT10.json  AT11.json  AT12.json  AT13.json  AT14.json  AT15.json  AT17.json  AT18.json  AT19.json  AT20.json  AT21.json  AT22.json  AT23.json  (+12 more)
models/embeddings/: model.py
models/encoder/: ltp.py
models/retrieval/: ES.py
src/: AY02.docx  __init__.py  app.py  logger.py  utils.py
src/api/: __init__.py  knowledge_endpoints.py
src/components/: component_funcs.py  main.py
src/core/: document_parser.py  knowledge_workflow.py  query_knowledge.py
src/utils/: data_manager.py  database.py  logger.py  mapping.py  utils.py
tests/: debug_helpers.py  test_docx_page_break.py  test_image_extract.py  test_mo.py  test_pdf_page_meta.py  test_pdf_parser_module.py  test_split_table.py  test_table_chunker.py  test_workflow_table_image.py
(+506 files in other folders)
