[project]
name = "ai-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "openpyxl==3.1.5",
    "python-docx==1.1.2",
    "modelscope==1.27.0",
    "transformers==4.43.0",
    "pymysql==1.1.1",
    "ltp==4.2.14",
    "rank_bm25==0.2.2",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13"
]
