[project]
name = "ai-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "modelscope==1.27.0",
    "numpy>=1.26",
    "openpyxl==3.1.5",
    "pandas>=2.3.0",
    "pillow>=11.0.0",
    "pydantic>=2.7",
    "pymysql==1.1.1",
    "pytesseract>=0.3.13",
    "pdfplumber>=0.11",
    "python-docx==1.1.2",
    "requests>=2.31",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers==4.43.0",
    "ltp==4.2.14",
    "uvicorn>=0.34.3"
]
